fix linewrap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,7 +90,7 @@ a:hover {
     }
 
     .highlight code {
-        white-space: normal;
+        white-space: inherit;
     }
 
     h1, h2, h3, h4 {
